# XLCLI

./: .gitignore  2026-04-17-200052-this-session-is-being-continued-from-a-previous-c.txt  CHEATSHEET.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  PLAN.md  Producto (product.template).xlsx  README.md  ktl3n81YTE28QBlSK10L-g_bf3842d4369a4d2ab5ec233ab7cf16e1_Monthly-Sales.xlsx
assets/: xlcli.desktop
crates/xlcli-core/: Cargo.toml
crates/xlcli-core/src/: cell.rs  condfmt.rs  dep_graph.rs  error.rs  lib.rs  range.rs  sheet.rs  style.rs  types.rs  workbook.rs
crates/xlcli-db/: Cargo.toml
crates/xlcli-db/src/: lib.rs
crates/xlcli-formulas/: Cargo.toml
crates/xlcli-formulas/src/: adjust.rs  ast.rs  eval.rs  lib.rs  parser.rs  refs.rs  registry.rs  token.rs
crates/xlcli-formulas/src/functions/: database.rs  date.rs  engineering.rs  financial.rs  info.rs  logical.rs  lookup.rs  math.rs  mod.rs  stat.rs  text.rs
crates/xlcli-io/: Cargo.toml
crates/xlcli-io/src/: csv_read.rs  csv_write.rs  lib.rs  reader.rs  writer.rs  xlsx_read.rs  xlsx_write.rs
crates/xlcli-python/: Cargo.toml
crates/xlcli-python/src/: lib.rs
crates/xlcli-tui/: Cargo.toml
crates/xlcli-tui/src/: app.rs  clipboard.rs  config.rs  input.rs  main.rs  mode.rs  render.rs  undo.rs  viewport.rs
packaging/: build-deb.sh
packaging/arch/: PKGBUILD
