[package]
name = "xlcli-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
compact_str = { workspace = true }
chrono = { workspace = true }
petgraph = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
indexmap = { workspace = true }
