[package]
name = "xlcli-io"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
xlcli-core = { workspace = true }
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
csv = { workspace = true }
quick-xml = { workspace = true }
zip = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
